namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-court-register-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-court-register-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "digital_warrant_folder_public"
    cloud-platform.justice.gov.uk/application: "HMPPS Court Register"
    cloud-platform.justice.gov.uk/owner: "Remand and Sentencing: calculatereleasedatesdevelopers@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-court-register-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-farsight-sentence-offence"
    cloud-platform.justice.gov.uk/review-after: ""
